referencia en index

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet" type="text/css">
     <title>Curso de GitHub con BigData</title>
 </head>
 <body>
     <center>
     <h1>Semana de ingenierias 2023</h1>
     <h3>Curso de GitHub</h3>
+    <br>
     <p>Curso realizado en el mes de abril 2023</p>
+    <br>
     <p>Hoy es el segundo día trabajando con GitHub</p>
     </center>
 </body>
